<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".registerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:text="@string/register_label"
            android:textColor="@color/gold"
            android:fontFamily="@font/aclonica"
            android:textSize="30dp" />
        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_register_label"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/firstname"
            android:textAlignment="center"
            android:fontFamily="@font/aclonica"
            android:textColorHint="@color/gold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstName"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/lastname"
            android:textAlignment="center"
            android:fontFamily="@font/aclonica"
            android:textColorHint="@color/gold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastName"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_gender"
            android:textAlignment="center"
            android:fontFamily="@font/aclonica"
            android:textColorHint="@color/gold"
            android:textSize="20sp"/>


        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:inputType="date"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_dob"
            android:textAlignment="center"
            android:fontFamily="@font/aclonica"
            android:textColorHint="@color/gold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:inputType="number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aclonica"
            android:hint="@string/hint_mobile"
            android:textAlignment="center"
            android:textColorHint="@color/gold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile"
            android:inputType="textEmailAddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aclonica"
            android:hint="@string/hint_email"
            android:textAlignment="center"
            android:textColorHint="@color/gold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_password"
            android:fontFamily="@font/aclonica"
            android:textColorHint="@color/gold"
            android:textAlignment="center"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/Cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_confirmPassword"
            android:fontFamily="@font/aclonica"
            android:textColorHint="@color/gold"
            android:textAlignment="center"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Cpassword"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_city"
            android:fontFamily="@font/aclonica"
            android:textColorHint="@color/gold"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/city"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/register_label"
            android:backgroundTint="#FFC107"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>