<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/text_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/aclonica"
        android:text="@string/login_label"
        android:textColor="@color/gold"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_login_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aclonica"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="@color/gold"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/gold"
        android:textSize="20sp"
        android:fontFamily="@font/aclonica"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FFEB3B"
        android:fontFamily="@font/aclonica"
        android:text="@string/login_label"
        android:textSize="20sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_register"
        android:text="@string/register_label"
        android:textSize="25sp"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="20dp"
        android:textColor="@color/gold"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/aclonica"

        />


</RelativeLayout>